--- a/src/components/budgeting/buttons.css
+++ b/src/components/budgeting/buttons.css
@@ -5,7 +5,7 @@
 	margin: 20px;
 	margin-top: 800px;
 	height: 200px;
-	width: 300px;
+	width: 250px;
 	display: flex;
     
 	background-color: #00487950;
